kubernetes/nextcloud-fpm/components/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: nextcloud-fpm
    spec:
      serviceAccountName: nextcloud
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: nextcloud
                topologyKey: kubernetes.io/hostname
      containers:
        - name: nextcloud
          # renovate: datasource=docker depName=docker.io/nextcloud
          image: docker.io/nextcloud:35.0.1-fpm
          ports:
            - containerPort: 9000
              name: fastcgi
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: nextcloud
              mountPath: /var/www/html
            - name: nextcloud-custom-apps
              mountPath: /var/www/html/custom_apps
            - name: nextcloud-config
              mountPath: /var/www/html/config
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-themes
              mountPath: /var/www/html/themes
            - name: tmp
              mountPath: /tmp
            - name: php-conf
              mountPath: /usr/local/etc/php/conf.d/redis-session.ini
              subPath: redis-session.ini
            - name: www-conf
              mountPath: /usr/local/etc/php-fpm.d/www.conf
              subPath: www.conf
          livenessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - 'count=$(/usr/local/bin/php /var/www/html/occ status 2>/dev/null | grep -E "installed: true" | grep -E "maintenance: false" | grep -E "needsDbUpgrade: false" | wc -l); if [ "$count" -eq 0 ] || [ "$count" -eq 3 ]; then exit 0; else exit 1; fi'
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - "/usr/local/bin/php /var/www/html/occ check"
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
        - name: nextcloud-custom-apps
          persistentVolumeClaim:
            claimName: nextcloud-custom-apps
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: nextcloud-themes
          persistentVolumeClaim:
            claimName: nextcloud-themes
        - name: tmp
          emptyDir:
            sizeLimit: 10Gi
        - name: php-conf
          emptyDir:
            sizeLimit: 64Mi
        - name: www-conf
          emptyDir:
            sizeLimit: 64Mi
