kubernetes/nextcloud-fpm/components/nextcloud/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-ingress
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      app: nextcloud
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-egress-internal
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["nextcloud", "nextcloud-cron", "nextcloud-preview"]
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              app: nextcloud-valkey
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              cnpg.io/cluster: nextcloud
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-egress-internet
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["nextcloud", "nextcloud-cron", "nextcloud-preview"]
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
